--- a/src/azdo/web/mergequeue/index.html
+++ b/src/azdo/web/mergequeue/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 
+<head>
+    <style lang="scss">
+        @import "../main.scss";
+    </style>
+</head>
+
 <body>
     <script type="module" src="main.tsx"></script>
     <div id="extension_root_div" class="full-width neutral-2"></div>
